Fix particles overlapping card

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 1;
 }
 
 #particles-js canvas{
